--- a/csharp/OpenMatch/OpenMatch.csproj
+++ b/csharp/OpenMatch/OpenMatch.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Google.Api.CommonProtos" Version="1.7.0" />
+    <PackageReference Include="Grpc" Version="2.26.0" />
   </ItemGroup>
 
 </Project>
